--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,12 @@
 @import './common';
-@import './example';
+
+
+@import './header-hero';
+@import './products';
+@import './about';
+
+@import './advantages';
+@import './gallery';
+@import './customer-reviews';
+@import './contacts';
+@import './footer';
